--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+vdr (1.2.6-10) unstable; urgency=low
+
+  * NOT RELEASED YET
+
+  * Thomas Schmidt <tschmidt@debian.org>
+    - Fixed small typos in the package descriptions of vdr and 
+      vdr-dev (closes: #300074)
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Thu, 17 Mar 2005 16:49:29 +0100
+
 vdr (1.2.6-9) experimental; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
