vdr: * Added fix for #300702      * Changed most appearances of my old email address to the        debian one
SVN: trunk@276

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,10 +3,11 @@ vdr (1.2.6-10) unstable; urgency=low
   * NOT RELEASED YET
 
   * Thomas Schmidt <tschmidt@debian.org>
+    - Added patch for the EPG handling under amd64 (closes: #300702)
     - Fixed small typos in the package descriptions of vdr and 
       vdr-dev (closes: #300042, #300074)
 
- -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Thu, 17 Mar 2005 16:49:29 +0100
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Mon, 21 Mar 2005 18:16:50 +0100
 
 vdr (1.2.6-9) experimental; urgency=low
 
