vdr: check for existance of /usr/sbin/runvdr before sourcing config-loader.sh (closes: #302826)
SVN: trunk@376

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,12 +4,14 @@ vdr (1.2.6-10) unstable; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
     - Added patch for the EPG handling under amd64 (closes: #300702)
+    - Check for existance of /usr/sbin/runvdr before sourcing the
+      config-loader.sh script (closes: #302826)
     - Fixed small typos in the package descriptions of vdr and 
       vdr-dev (closes: #300042, #300074)
     - Add user vdr to group cdrom in postinst, so that vdr is able to
       play dvd's with the dvd-plugin again
 
- -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Thu, 31 Mar 2005 23:47:37 +0200
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 03 Apr 2005 11:32:15 +0200
 
 vdr (1.2.6-9) experimental; urgency=low
 
