vdr: allow to run as root anway with --allow-root SVN: trunk@390

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vdr (1.2.6-11) unstable; urgency=low
+
+  * Tobias Grimm <tg@e-tobi.net> 
+    - Modified not-as-root-patch to allow to start VDR as root anyway, if the
+      option --allow-root is given
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sat,  9 Apr 2005 18:25:57 +0200
+
 vdr (1.2.6-10) unstable; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
