--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+vdr (1.3.23-1) experimental; urgency=low
+
+  * (NOT RELEASED YET) 
+  
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+      + Removed 01_gcc3.4-FTBFS-fix.dpatch
+      + Removed 09_amd64_epg.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sat, 09 Apr 2005 20:43:31 +0200
+
 vdr (1.2.6-11) unstable; urgency=low
 
   * Tobias Grimm <tg@e-tobi.net> 
