--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ vdr (1.3.23-1) experimental; urgency=low
     - New upstream release
       + Removed 01_gcc3.4-FTBFS-fix.dpatch
       + Removed 09_amd64_epg.dpatch
+    - Use LD_ASSUME_KERNEL=2.4.1 when calling vdr in plugins-loader.sh
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sat, 09 Apr 2005 20:43:31 +0200
 
