--- a/debian/changelog
+++ b/debian/changelog
@@ -21,8 +21,18 @@ vdr (1.3.23-1) experimental; urgency=low
   * Tobias Grimm <tg@e-tobi.net>
     - Don't restrict root capabilities with --allow-root anymore
     - Passing $OPTIONS to binary compatibility test in plugin loader now
+  * Darren Salt <linux@youmustbejoking.demon.co.uk>
+    - Added patches:
+      + 09_sort_options: extra channel sort options
+      + 10_livelock: don't hang when jumping between editing marks
+      + 11_memleak: fix two small memory leaks
+      + 12_nptl: don't abort if NPTL is in use
+      + 15_dvbplayer: send proper I-frames [Reinhard Nissl]
+      + 16_dvbspu: fix some SPU bugs [Reinhard Nissl]
+      + 17_replay: improve end-of-recording handling [Reinhard Nissl]
+    - Replaced the ttxtsubs patch with a combined subtitles+ttxtsubs patch.
 
- -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sat, 09 Apr 2005 20:43:31 +0200
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Mon, 18 Apr 2005 23:26:21 +0100
 
 vdr (1.2.6-12) unstable; urgency=low
 
