--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ vdr (1.3.23-1) experimental; urgency=low
     - New upstream release
       + Removed 01_gcc3.4-FTBFS-fix.dpatch
       + Removed 09_amd64_epg.dpatch
+      + Removed opt-23_osdpip-0.0.3.dpatch
+      + Removed opt-20_elchiaio4d+1.dpatch
+      + Removed opt-22_8bitcolor.dpatch
+      + Updated jumplay patch to version 0.6
     - Use LD_ASSUME_KERNEL=2.4.1 when calling vdr in plugins-loader.sh
     - Changes suggested by Thomas Günther <tom@toms-cafe.de>
       + debian/watch: Updated to show the newest developer versions
