--- a/debian/changelog
+++ b/debian/changelog
@@ -35,11 +35,20 @@ vdr (1.3.23-1) experimental; urgency=low
       + 16_dvbspu: fix some SPU bugs [Reinhard Nissl]
       + 17_replay: improve end-of-recording handling [Reinhard Nissl]
     - Replaced the ttxtsubs patch with a combined subtitles+ttxtsubs patch.
-    - Make the usage of NPTL configurable in /etc/default/vdr
-    - Disable the usage of NPTL on amd64 in runvdr (this allways overrides 
-      the setting in /etc/default/vdr) (closes: #305098)
 
- -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Mon, 18 Apr 2005 23:26:21 +0100
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Wed, 04 May 2005 17:17:55 +0200
+
+vdr (1.2.6-13) unstable; urgency=medium
+
+  * Darren Salt <linux@youmustbejoking.demon.co.uk>
+    - Make the usage of NPTL configurable in /etc/default/vdr
+    - Disable the usage of NPTL on amd64 in runvdr (this allways 
+      overrides  the setting in /etc/default/vdr) (closes: #305098)
+  * Thomas Schmidt <tschmidt@debian.org>
+    - Added psmisc to the depends of the package vdr (thanks to Martin 
+      Langer <martin-langer@gmx.de> for the hint)
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Thu, 05 May 2005 21:47:56 +0200
 
 vdr (1.2.6-12) unstable; urgency=low
 
