--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,16 @@
-vdr (1.3.23-1) experimental; urgency=low
+vdr (1.3.24-1) experimental; urgency=low
 
   * (NOT RELEASED YET) 
   
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+      + Removed 11_memleak.dpatch
+      + Updated 15_dvbplayer.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Mon,  9 May 2005 15:47:50 +0200
+
+vdr (1.3.23-1) experimental; urgency=low
+
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
       + Removed 01_gcc3.4-FTBFS-fix.dpatch
