vdr: Disabled 10_livelock.dpatch, it seems that it causes problems      during replayig recordings every few minutes (still needs more      testing here, but the problems seems to be gone now)
SVN: trunk@568

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ vdr (1.3.24-1) experimental; urgency=low
   
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
+      + Removed 10_livelock.dpatch
       + Removed 11_memleak.dpatch
       + Updated 15_dvbplayer.dpatch
 
