--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,15 @@
+vdr (1.3.25-1) experimental; urgency=low
+
+  * (NOT RELEASED YET) New upstream release
+
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+      + Updated 05_set_system_time_as_user.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue, 31 May 2005 14:06:49 +0200
+
 vdr (1.3.24-1) experimental; urgency=low
 
-  * (NOT RELEASED YET) 
-  
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
       + Removed 10_livelock.dpatch
