--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ vdr (1.3.25-1) experimental; urgency=low
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
       + Updated 05_set_system_time_as_user.dpatch
+    - Create device files silently
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue, 31 May 2005 14:06:49 +0200
 
