--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,14 @@
-vdr (1.3.25-1) experimental; urgency=low
+vdr (1.3.26-1) unstable; urgency=low
 
   * (NOT RELEASED YET) New upstream release
+  
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+      + Added 18_vdr-1.3.26-pagedown-fix.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 12 Jun 2005 16:52:15 +0200
+
+vdr (1.3.25-1) experimental; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
