--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,16 @@
-vdr (1.3.26-1) unstable; urgency=low
+vdr (1.3.27-1) unstable; urgency=low
 
   * (NOT RELEASED YET) New upstream release
   
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+      + Removed 12_nptl.dpatch
+      + Removed 18_vdr-1.3.26-pagedown-fix.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 19 Jun 2005 17:25:56 +0200
+
+vdr (1.3.26-1) unstable; urgency=low
+
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
       + Added 18_vdr-1.3.26-pagedown-fix.dpatch
