--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ vdr (1.3.27-1) unstable; urgency=low
       or to replay Dolby Digital independently
   * Tobias Grimm <tg@e-tobi.net>
     - Added installation of README.vps and README.developer
+    - Fixed parameter passing in vdr-shutdown
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 19 Jun 2005 17:25:56 +0200
 
