--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ vdr (1.3.27-1) unstable; urgency=low
     - Fixed package description
     - Replaced some tabs with spaces and fixed indentation
     - Took over commands-loader.sh from vdrdevel
+    - Added ${shlibs:Depends}
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 19 Jun 2005 17:25:56 +0200
 
