--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+vdr (1.3.27-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+  
+  * Thomas Schmidt <tschmidt@debian.org>
+    - vdr-dev: depend on debhelper 
+    - vdr-dev: suggests dh-make
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Thu, 30 Jun 2005 11:19:19 +0200
+
 vdr (1.3.27-1) unstable; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
