--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,8 @@ vdr (1.3.27-2) UNRELEASED; urgency=low
   * NOT RELEASED YET
   
   * Thomas Schmidt <tschmidt@debian.org>
-    - vdr-dev: depend on debhelper 
+    - vdr-dev: depend on debhelper, dvb-dev (>= 1.0.0) | 
+      linux-kernel-headers (>=2.5.999-test7-bk-6) 
     - vdr-dev: suggests dh-make
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Thu, 30 Jun 2005 11:19:19 +0200
