--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,18 @@
-vdr (1.3.27-2) UNRELEASED; urgency=low
+vdr (1.3.28-1) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
   
   * Thomas Schmidt <tschmidt@debian.org>
-    - vdr-dev: depend on debhelper, dvb-dev (>= 1.0.0) | 
+    - New upstream release
+      + Removed 13_remote.dpatch
+      + Updated 10_dd-record-option.dpatch
+      + Updated 15_dvbplayer.dpatch
+      + Updated 16_dvbspu.dpatch
+    - vdr-dev: depend on ${misc:Depends}, dvb-dev (>= 1.0.0) | 
       linux-kernel-headers (>=2.5.999-test7-bk-6) 
     - vdr-dev: suggests dh-make
 
- -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Thu, 30 Jun 2005 11:19:19 +0200
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue,  9 Aug 2005 20:45:37 +0200
 
 vdr (1.3.27-1) unstable; urgency=low
 
