--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ vdr (1.3.28-1) UNRELEASED; urgency=low
     - vdr-dev: depend on ${misc:Depends}, dvb-dev (>= 1.0.0) | 
       linux-kernel-headers (>=2.5.999-test7-bk-6) 
     - vdr-dev: suggests dh-make
+  * Tobias Grimm <tg@e-tobi.net>
+    - Extract patch infos and install to /usr/share/doc/vdr/patchinfo
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue,  9 Aug 2005 20:45:37 +0200
 
