--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-vdr (1.3.28-1) UNRELEASED; urgency=low
+vdr (1.3.28-1) unstable; urgency=low
 
   * NOT RELEASED YET
   
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
       + Removed 13_remote.dpatch
+      + Removed 16_dvbspu.dpatch
       + Updated 10_dd-record-option.dpatch
       + Updated 15_dvbplayer.dpatch
       + Updated 16_dvbspu.dpatch
