--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,5 @@
 vdr (1.3.28-1) unstable; urgency=low
 
-  * NOT RELEASED YET
-  
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
       + Removed 13_remote.dpatch
@@ -9,8 +7,8 @@ vdr (1.3.28-1) unstable; urgency=low
       + Updated 10_dd-record-option.dpatch
       + Updated 15_dvbplayer.dpatch
       + Updated 16_dvbspu.dpatch
-    - vdr-dev: depend on ${misc:Depends}, dvb-dev (>= 1.0.0) | 
-      linux-kernel-headers (>=2.5.999-test7-bk-6) 
+    - vdr-dev: depend on ${misc:Depends}, debhelper, 
+      dvb-dev (>= 1.0.0) | linux-kernel-headers (>=2.5.999-test7-bk-6) 
     - vdr-dev: suggests dh-make
   * Tobias Grimm <tg@e-tobi.net>
     - Extract patch infos and install to /usr/share/doc/vdr/patchinfo
