--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ vdr (1.3.28-1) unstable; urgency=low
     - vdr-dev: suggests dh-make
   * Tobias Grimm <tg@e-tobi.net>
     - Extract patch infos and install to /usr/share/doc/vdr/patchinfo
+    - Renamed 01_vdr_1.2.6-3.1.diff.gz to 01_Makefile-fPIC-fix
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue,  9 Aug 2005 20:45:37 +0200
 
