--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vdr (1.3.28-2) unstable; urgency=low
+
+  * Tobias Grimm <tg@e-tobi.net>
+    - Added osdbase-maxitems patch, which fixes a problem with the Enigma skin
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 14 Aug 2005 14:33:39 +0200
+
 vdr (1.3.28-1) unstable; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
