--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ vdr (1.3.29-1) unstable; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
+  * Thomas Günther <tom@toms-cafe.de>
+    - Improved newplugin script
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Mon, 15 Aug 2005 17:31:44 +0200
 
