--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ vdr (1.3.29-1) unstable; urgency=low
     - New upstream release
   * Thomas Günther <tom@toms-cafe.de>
     - Improved newplugin script
+    - Updated opt-24_jumpplay-0.6.dpatch
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Mon, 15 Aug 2005 17:31:44 +0200
 
