--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ vdr (1.3.29-1) unstable; urgency=low
   * Thomas Günther <tom@toms-cafe.de>
     - Improved newplugin script
     - Updated opt-24_jumpplay-0.6.dpatch
+    - Added 13_epgfix.dpatch to force saving of EPG data on exit
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Mon, 15 Aug 2005 17:31:44 +0200
 
