--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ vdr (1.3.31-1) unstable; urgency=low
   
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
+    - Use --background when calling start-stop-daemon in the init-script
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 28 Aug 2005 18:25:00 +0200
 
