--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ vdr (1.3.31-1) unstable; urgency=low
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
     - Use --background when calling start-stop-daemon in the init-script
+  * Tobias Grimm <tg@e-tobi.net>
+    - Made debian/patchlevel.sh acccept opt-entries in 00list with leading
+      spaces and removed leading space from vdr-patchlevel output
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 28 Aug 2005 18:25:00 +0200
 
