--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ vdr (1.3.31-1) unstable; urgency=low
   * Tobias Grimm <tg@e-tobi.net>
     - Made debian/patchlevel.sh acccept opt-entries in 00list with leading
       spaces and removed leading space from vdr-patchlevel output
+  * Thomas Günther <tom@toms-cafe.de>
+    - Made debian/plugin-template/rules svn-buildpackage-save
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 28 Aug 2005 18:25:00 +0200
 
