--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ vdr (1.3.31-1) unstable; urgency=low
       spaces and removed leading space from vdr-patchlevel output
   * Thomas Günther <tom@toms-cafe.de>
     - Made debian/plugin-template/rules svn-buildpackage-save
+    - Updated 15_dvbplayer.dpatch
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 28 Aug 2005 18:25:00 +0200
 
