--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ vdr (1.3.31-1) unstable; urgency=low
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
     - Use --background when calling start-stop-daemon in the init-script
+    - Added 16_avoidTrashing.dpatch, which prevent vdr from trashing the 
+      file system buffers when reading/writing recordings
   * Tobias Grimm <tg@e-tobi.net>
     - Made debian/patchlevel.sh acccept opt-entries in 00list with leading
       spaces and removed leading space from vdr-patchlevel output
