--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,12 @@ vdr (1.3.31-1) unstable; urgency=low
     - Use --background when calling start-stop-daemon in the init-script
     - Added 16_avoidTrashing.dpatch, which prevent vdr from trashing the 
       file system buffers when reading/writing recordings
+    - Added 18_vdr-1.3.31-remuxbraces - Fixes some gcc warning messages 
+    - Added 19_vdr-1.3.31-remux - Fixes a bug in cVideo/AudioRepacker::Repack()
+    - Added 20_vdr-1.3.31-sequence-end-code5 - Fixes a problem with appending 
+      a sequence end code when moving cutting marks in radio recordings
+    - Added 21_vdr-1.3.31-skipframes - Fixes a problem with skipping frames
+      when moving cutting marks in radio recordings
   * Tobias Grimm <tg@e-tobi.net>
     - Made debian/patchlevel.sh acccept opt-entries in 00list with leading
       spaces and removed leading space from vdr-patchlevel output
