--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ vdr (1.3.31-1) unstable; urgency=low
       a sequence end code when moving cutting marks in radio recordings
     - Added 21_vdr-1.3.31-skipframes - Fixes a problem with skipping frames
       when moving cutting marks in radio recordings
+    - Added dependencies.sh to vdr-dev to automatically fill in the right
+      Depends and Conflicts to vdr when building a plugin
   * Tobias Grimm <tg@e-tobi.net>
     - Made debian/patchlevel.sh acccept opt-entries in 00list with leading
       spaces and removed leading space from vdr-patchlevel output
