--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ vdr (1.3.31-1) unstable; urgency=low
     - Use --background when calling start-stop-daemon in the init-script
     - Added 16_avoidTrashing.dpatch, which prevent vdr from trashing the 
       file system buffers when reading/writing recordings
-    - Added 18_vdr-1.3.31-remuxbraces - Fixes some gcc warning messages 
+    - Added 18_vdr-1.3.31-remuxbraces - Fixes some gcc4 warning messages 
     - Added 19_vdr-1.3.31-remux - Fixes a bug in cVideo/AudioRepacker::Repack()
     - Added 20_vdr-1.3.31-sequence-end-code5 - Fixes a problem with appending 
       a sequence end code when moving cutting marks in radio recordings
@@ -15,6 +15,9 @@ vdr (1.3.31-1) unstable; urgency=low
       when moving cutting marks in radio recordings
     - Added dependencies.sh to vdr-dev to automatically fill in the right
       Depends and Conflicts to vdr when building a plugin
+    - Cleaned up debian/rules and synced as far as possible with the version
+      from Tobias inofficial vdr package and changed a few things as suggested
+      by Thomas Günther
   * Tobias Grimm <tg@e-tobi.net>
     - Made debian/patchlevel.sh acccept opt-entries in 00list with leading
       spaces and removed leading space from vdr-patchlevel output
