--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,8 @@
 vdr (1.3.31-2) unstable; urgency=low
 
-  * NOT RELEASED YET
-
   * Thomas Schmidt <tschmidt@debian.org>
-    - Updated 01_Makefile-fPIC-fix.dpatch, to add -fPIC to the Makefiles
-      of the new example plugins
+    - Updated 01_Makefile-fPIC-fix.dpatch, added -fPIC to the Makefiles
+      of the new example plugins to fix the FTBFS on some architectures
   
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Fri,  2 Sep 2005 23:26:47 +0200
 
