--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ vdr (1.3.31-3) unstable; urgency=low
     - Build-Depend on libncurses5-dev, so the skincurses plugin gets compiled
     - Install the plugins svccli, svcsvr, skincurses and svdrpdemo into the
       vdr-plugin-examples package
+    - Modified the init-script to not exit silently if vdr is disabled in 
+      /etc/default/vdr (which is the default), instead of this showing a small
+      note how to enable the daemon
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun,  4 Sep 2005 17:18:11 +0200
 
