--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,11 @@ vdr (1.3.31-3) unstable; urgency=low
     - Modified the init-script to not exit silently if vdr is disabled in 
       /etc/default/vdr (which is the default), instead of this showing a small
       note how to enable the daemon
+    - Do not try to call vdr with LD_ASSUME_KERNEL=2.4.1 in plugins-loader.sh
+      on amd64 (many thanks to Sören Köpping for reporting the problem and
+      sending a patch) (closes: #326866)
 
- -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun,  4 Sep 2005 17:18:11 +0200
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue,  6 Sep 2005 14:19:43 +0200
 
 vdr (1.3.31-2) unstable; urgency=low
 
