--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,10 @@ vdr (1.3.31-3) unstable; urgency=low
       sending a patch) (closes: #326866)
   * Thomas Günther <tom@toms-cafe.de>
     - Fixed vdr call with LD_ASSUME_KERNEL=2.4.1 in plugins-loader.sh
+    - Adapted debian/plugin-loader.sh to example plugins
+    - Fixed patchlevel substitution for architecture-independent packages
+    - Removed unnecessary debian/vdr-dev.dirs and unnecessary entries from
+      debian/vdr.dirs
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue,  6 Sep 2005 14:19:43 +0200
 
