vdr: New upstream release 1.3.32      + Updated 10_dd-record-option.dpatch      + Removed 18_vdr-1.3.31-remuxbraces.dpatch      + Removed 19_vdr-1.3.31-remux.dpatch      + Removed 20_vdr-1.3.31-sequence-end-code5.dpatch      + Removed 21_vdr-1.3.31-skipframes.dpatch
SVN: trunk@1215

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,19 @@
-vdr (1.3.31-3) unstable; urgency=low
+vdr (1.3.32-1) unstable; urgency=low
 
   * NOT RELEASED YET
   
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+      + Updated 10_dd-record-option.dpatch
+      + Removed 18_vdr-1.3.31-remuxbraces.dpatch
+      + Removed 19_vdr-1.3.31-remux.dpatch
+      + Removed 20_vdr-1.3.31-sequence-end-code5.dpatch
+      + Removed 21_vdr-1.3.31-skipframes.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 11 Sep 2005 17:58:47 +0200
+
+vdr (1.3.31-3) unstable; urgency=low
+
   * Thomas Schmidt <tschmidt@debian.org>
     - Updated 01_Makefile-fPIC-fix.dpatch again, added -fPIC to the Makefile 
       of the skincurses plugin
@@ -622,8 +634,3 @@ vdr (0.95-1) unstable; urgency=low
   * Made a little hack to create the channel.conf template from Debian examples
 
  -- Eduard Bloch <blade@debian.org>  Sat, 22 Sep 2001 03:16:11 +0200
-
-Local variables:
-mode: debian-changelog
-End:
-
