--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,16 @@
-vdr (1.3.32-1) unstable; urgency=low
+vdr (1.3.33-1) unstable; urgency=low
 
   * NOT RELEASED YET
   
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+      + Removed 14_update-resume.dpatch
+      + Removed 18_vdr-plugin-sky-fix
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 25 Sep 2005 17:51:14 +0200
+
+vdr (1.3.32-1) unstable; urgency=low
+
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
       + Added 18_vdr-plugin-sky-fix.dpatch
