--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ vdr (1.3.33-1) unstable; urgency=low
     - New upstream release
       + Removed 14_update-resume.dpatch
       + Removed 18_vdr-plugin-sky-fix
+    - Added initial Swedish translation (sv.po) of the debconf template
+      from Daniel Nylander (closes: #330988)
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 25 Sep 2005 17:51:14 +0200
 
