--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ vdr (1.3.33-1) unstable; urgency=low
   * Thomas Günther <tom@toms-cafe.de>
     - Added 18_vdr-1.3.33-recordingsmenu.dpatch
     - Added 19_vdr-1.3.33-recordingsupdate.dpatch
+    - Fixed make PLUGINS/lib in debian/rules
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 25 Sep 2005 17:51:14 +0200
 
