--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ vdr (1.3.35-1) unstable; urgency=low
       + Removed 16_avoidTrashing.dpatch
       + Removed 18_vdr-1.3.33-recordingsmenu.dpatch
       + Removed 19_vdr-1.3.33-recordingsupdate.dpatch
+    - Corrected FSF Address in debian/copyright
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue,  1 Nov 2005 21:43:03 +0100
 
@@ -53,7 +54,7 @@ vdr (1.3.31-3) unstable; urgency=low
       /etc/default/vdr (which is the default), instead of this showing a small
       note how to enable the daemon
     - Do not try to call vdr with LD_ASSUME_KERNEL=2.4.1 in plugins-loader.sh
-      on amd64 (many thanks to Sören Köpping for reporting the problem and
+      on amd64 (many thanks to SÃ¶ren KÃ¶pping for reporting the problem and
       sending a patch) (closes: #326866)
   * Thomas GÃ¼nther <tom@toms-cafe.de>
     - Fixed vdr call with LD_ASSUME_KERNEL=2.4.1 in plugins-loader.sh
