--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ vdr (1.3.35-1) unstable; urgency=low
       + Removed 16_avoidTrashing.dpatch
       + Removed 18_vdr-1.3.33-recordingsmenu.dpatch
       + Removed 19_vdr-1.3.33-recordingsupdate.dpatch
+      + Added 16_recordings.c-fix.dpatch
     - Corrected FSF Address in debian/copyright
     - Call dh_installman in binary-indep target in debian/rules, to 
       (re-)include 2 missing manpages
