--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+vdr (1.3.37-1) unstable; urgency=low
+
+  * NOT RELEASED YET
+
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+      + Removed 01_Makefile-fPIC-fix.dpatch
+      + Updated 03_cmdsubmenu.dpatch
+      + Updated 04_newplugin.dpatch
+      + Removed 16_recordings.c-fix.dpatch
+      + Removed 22_vdr-playerepg.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Mon, 28 Nov 2005 22:23:52 +0100
+
 vdr (1.3.35-1) unstable; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
