--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+vdr (1.3.38-1) unstable; urgency=low
+
+  * NOT RELEASED YET
+
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+      + Removed 05_set_system_time_as_user.dpatch
+      + Updated 06_default_svdrp_port_0.dpatch
+      + Removed 07_not_as_root.dpatch
+      + Removed 08_security_CAN-2005-0071.dpatch
+    - Do not try to install ca.conf, because it is not needed anmore
+    - Removed option to set group under which vdr should run from the
+      init-script
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun,  8 Jan 2006 20:13:57 +0100
+
 vdr (1.3.37-1) unstable; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
