--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,16 @@
-vdr (1.3.38-1) unstable; urgency=low
+vdr (1.3.39-1) unstable; urgency=low
 
   * NOT RELEASED YET
+
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+      + Updated 06_default_svdrp_port_0.dpatch
+      + Updated 09_sort_options.dpatch
+      + Removed 18_vdr-1.3.38-root-fix.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue, 17 Jan 2006 21:22:07 +0100
+
+vdr (1.3.38-1) unstable; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
