--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,12 @@ vdr (1.3.39-1) unstable; urgency=low
       + Updated 06_default_svdrp_port_0.dpatch
       + Updated 09_sort_options.dpatch
       + Removed 18_vdr-1.3.38-root-fix.dpatch
+      + Added 18_vdr-1.3.39-menu-on-control
+      + Added 19_vdr-1.3.39-clre-crash-fix
+      + Added 20_vdr-1.3.39-schedule-crash-fix
+      + Added 21_vdr-1.3.39-keys-fix
 
- -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue, 17 Jan 2006 21:22:07 +0100
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Fri, 20 Jan 2006 22:31:37 +0100
 
 vdr (1.3.38-1) unstable; urgency=low
 
