--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,10 @@ vdr (1.3.39-1) unstable; urgency=low
       + Added 19_vdr-1.3.39-clre-crash-fix
       + Added 20_vdr-1.3.39-schedule-crash-fix
       + Added 21_vdr-1.3.39-keys-fix
+    - Changed init-script to use allmoast the same start and stop 
+      functions like ctvdr
 
- -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Fri, 20 Jan 2006 22:31:37 +0100
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sat, 21 Jan 2006 16:31:47 +0100
 
 vdr (1.3.38-1) unstable; urgency=low
 
