--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ vdr (1.3.39-1) unstable; urgency=low
       + Added 21_vdr-1.3.39-keys-fix
     - Changed init-script to use allmoast the same start and stop 
       functions like ctvdr
+  * Thomas Günther <tom@toms-cafe.de>
+    - Added option "-g /tmp" to vdr call in debian/vdr.init (necessary
+      for image grabbing from vdradmin)
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sat, 21 Jan 2006 16:31:47 +0100
 
