--- a/debian/changelog
+++ b/debian/changelog
@@ -1,23 +1,21 @@
 vdr (1.3.39-1) unstable; urgency=low
 
-  * NOT RELEASED YET
-
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
       + Updated 06_default_svdrp_port_0.dpatch
       + Updated 09_sort_options.dpatch
       + Removed 18_vdr-1.3.38-root-fix.dpatch
-      + Added 18_vdr-1.3.39-menu-on-control
-      + Added 19_vdr-1.3.39-clre-crash-fix
-      + Added 20_vdr-1.3.39-schedule-crash-fix
-      + Added 21_vdr-1.3.39-keys-fix
+      + Added 18_vdr-1.3.39-menu-on-control.dpatch
+      + Added 19_vdr-1.3.39-clre-crash-fix.dpatch
+      + Added 20_vdr-1.3.39-schedule-crash-fix.dpatch
+      + Added 21_vdr-1.3.39-keys-fix.dpatch
     - Changed init-script to use allmoast the same start and stop 
       functions like ctvdr
   * Thomas Günther <tom@toms-cafe.de>
     - Added option "-g /tmp" to vdr call in debian/vdr.init (necessary
       for image grabbing from vdradmin)
 
- -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sat, 21 Jan 2006 16:31:47 +0100
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 22 Jan 2006 11:54:59 +0100
 
 vdr (1.3.38-1) unstable; urgency=low
 
