--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+vdr (1.3.40-1) unstable; urgency=low
+
+  * NOT RELEASED YET
+
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+      + Removed 19_vdr-1.3.39-clre-crash-fix.dpatch
+      + Removed 20_vdr-1.3.39-schedule-crash-fix.dpatch
+      + Removed 21_vdr-1.3.39-keys-fix.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Thu, 26 Jan 2006 20:51:50 +0100
+
 vdr (1.3.39-1) unstable; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
