--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,15 @@
-vdr (1.3.40-1) unstable; urgency=low
+vdr (1.3.41-1) unstable; urgency=low
 
   * NOT RELEASED YET
+
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+      + Removed 13_epgfix.dpatch
+      + Added 99_epg-fix.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Thu,  2 Feb 2006 14:47:30 +0100
+
+vdr (1.3.40-1) unstable; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
