--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ vdr (1.3.41-1) unstable; urgency=low
     - New upstream release
       + Removed 13_epgfix.dpatch
       + Added 99_epg-fix.dpatch
+      + Added 19_vdr-1.3.41-no-title-fix.dpatch
 
- -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Thu,  2 Feb 2006 14:47:30 +0100
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue,  7 Feb 2006 22:50:56 +0100
 
 vdr (1.3.40-1) unstable; urgency=low
 
