--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,6 @@ vdr (1.3.41-1) unstable; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
-      + Added 01_IA64-FTBFS-fix - fixes FTBFS of vdr>=1.3.38 on ia64
       + Removed 13_epgfix.dpatch
       + Added 99_epg-fix.dpatch
       + Added 19_vdr-1.3.41-no-title-fix.dpatch
@@ -20,6 +19,13 @@ vdr (1.3.40-1) unstable; urgency=low
       + Removed 21_vdr-1.3.39-keys-fix.dpatch
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Thu, 26 Jan 2006 20:51:50 +0100
+
+vdr (1.3.39-2) unstable; urgency=low
+
+  * Thomas Schmidt <tschmidt@debian.org>
+    - Added 01_IA64-FTBFS-fix - fixes FTBFS of vdr>=1.3.38 on ia64
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue, 14 Mar 2006 16:35:14 +0100
 
 vdr (1.3.39-1) unstable; urgency=low
 
