--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ vdr (1.3.45-1) unstable; urgency=low
       + Updated 15_dvbplayer.dpatch
       + Removed 18_vdr-1.3.39-menu-on-control.dpatch
       + Removed 19_vdr-1.3.41-no-title-fix.dpatch
+    - Do not build-depend on dvb-dev anymore, this package is just a
+      dummy-package for easier woody -> sarge upgrades and will be 
+      removed from the archive soon
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 26 Mar 2006 18:08:29 +0200
 
