--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ vdr (1.3.46-1) UNRELEASED; urgency=low
     - Removed 16_vdr_1.3.45_diseqc.conf-fix.dpatch
     - Removed 17_replay.dpatch
     - Removed 99_epg-fix.dpatch
+    - Added 16_vdr-1.3.46_menuitems.c-fix.dpatch
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun,  9 Apr 2006 17:46:02 +0200
 
