--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+vdr (1.3.47-1) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+  * New upstream release
+  * Thomas Günther <tom@toms-cafe.de>
+    - Updated 10_dd-record-option.dpatch
+    - Removed 16_vdr-1.3.46_menuitems.c-fix.dpatch
+    - Upgraded opt-24_jumpplay-0.6.dpatch to opt-24_jumpplay-0.7.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue, 18 Apr 2006 00:53:07 +0200
+
 vdr (1.3.46-1) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
