--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-vdr (1.3.47-1) UNRELEASED; urgency=low
+vdr (1.3.47-1) unstable; urgency=low
 
   * NOT RELEASED YET
 
@@ -7,12 +7,14 @@ vdr (1.3.47-1) UNRELEASED; urgency=low
     - Updated 10_dd-record-option.dpatch
     - Removed 16_vdr-1.3.46_menuitems.c-fix.dpatch
     - Upgraded opt-24_jumpplay-0.6.dpatch to opt-24_jumpplay-0.7.dpatch
+  * Thomas Schmidt <tschmidt@debian.org>
+    - Conflict with vdradmin (< 3.4.3) to force users to upgrade to
+      vdradmin-am, because the old vdradmin package which is partly 
+      incompatible with newer vdr versions
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Tue, 18 Apr 2006 00:53:07 +0200
 
-vdr (1.3.46-1) UNRELEASED; urgency=low
-
-  * NOT RELEASED YET
+vdr (1.3.46-1) unstable; urgency=low
 
   * New upstream release
   * Thomas Günther <tom@toms-cafe.de>
