--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+vdr (1.3.47-2) unstable; urgency=low
+
+  * NOT RELEASED YET
+
+  * Thomas Günther <tom@toms-cafe.de>
+    - Changed dependencies.sh: don't create conflicts with next vdr version
+    - Changed plugin-loader.sh: detect api version, too
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sat, 22 Apr 2006 17:03:40 +0200
+
 vdr (1.3.47-1) unstable; urgency=low
 
   * NOT RELEASED YET
