--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ vdr (1.3.47-2) unstable; urgency=low
   * Thomas Günther <tom@toms-cafe.de>
     - Changed dependencies.sh: don't create conflicts with next vdr version
     - Changed plugin-loader.sh: detect api version, too
+    - Upgraded 03_cmdsubmenu.dpatch to version 0.6
 
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sat, 22 Apr 2006 17:03:40 +0200
 
