--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+vdr (1.3.48-1) unstable; urgency=low
+
+  * NOT RELEASED YET
+
+  * New upstream release
+  * Thomas Günther <tom@toms-cafe.de>
+    - Updated 10_dd-record-option.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 23 Apr 2006 20:06:48 +0200
+
 vdr (1.3.47-2) unstable; urgency=low
 
   * NOT RELEASED YET
