--- a/debian/changelog
+++ b/debian/changelog
@@ -3,29 +3,13 @@ vdr (1.3.48-1) unstable; urgency=low
   * NOT RELEASED YET
 
   * New upstream release
+  * Tobias Grimm <tg@e-tobi.net>
+    - Call target clean-plugins instead of plugins-clean in debian/rules
   * Thomas Günther <tom@toms-cafe.de>
     - Updated 10_dd-record-option.dpatch
-
- -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 23 Apr 2006 20:06:48 +0200
-
-vdr (1.3.47-2) unstable; urgency=low
-
-  * NOT RELEASED YET
-
-  * Thomas Günther <tom@toms-cafe.de>
     - Changed dependencies.sh: don't create conflicts with next vdr version
     - Changed plugin-loader.sh: detect api version, too
     - Upgraded 03_cmdsubmenu.dpatch to version 0.6
-
- -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sat, 22 Apr 2006 17:03:40 +0200
-
-vdr (1.3.47-1) unstable; urgency=low
-
-  * NOT RELEASED YET
-
-  * New upstream release
-  * Thomas Günther <tom@toms-cafe.de>
-    - Updated 10_dd-record-option.dpatch
     - Removed 16_vdr-1.3.46_menuitems.c-fix.dpatch
     - Upgraded opt-24_jumpplay-0.6.dpatch to opt-24_jumpplay-0.7.dpatch
   * Thomas Schmidt <tschmidt@debian.org>
