--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
-vdr (1.3.48-1) unstable; urgency=low
+vdr (1.4.0-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * Thomas Schmidt <tschmidt@debian.org>
+    - New upstream release
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 30 Apr 2006 14:52:45 +0200
+
+vdr (1.3.48-1) unstable; urgency=low
 
   * New upstream release
   * Tobias Grimm <tg@e-tobi.net>
@@ -32,8 +37,6 @@ vdr (1.3.46-1) unstable; urgency=low
  -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun,  9 Apr 2006 17:46:02 +0200
 
 vdr (1.3.45-1) unstable; urgency=low
-
-  * NOT RELEASED YET
 
   * Thomas Schmidt <tschmidt@debian.org>
     - New upstream release
