--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+vdr (1.4.0-2) unstable; urgency=low
+
+  * NOT RELEASED YET
+
+  * Thomas Günther <tom@toms-cafe.de>
+    - Fixed i18n texts for replay in 10_dd-record-option.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Mon,  1 May 2006 18:45:36 +0200
+
 vdr (1.4.0-1) unstable; urgency=low
 
   * Thomas Schmidt <tschmidt@debian.org>
