Upgraded 03_cmdsubmenu.dpatch (closes: #367360) SVN: trunk@2782

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ vdr (1.4.0-2) unstable; urgency=low
 
   * Thomas Günther <tom@toms-cafe.de>
     - Fixed i18n texts for replay in 10_dd-record-option.dpatch
+    - Upgraded 03_cmdsubmenu.dpatch to version 0.7 - fixes FTBFS with G++ 4.1:
+      extra qualification (closes: #367360)
   * Thomas Schmidt <tschmidt@debian.org>
     - Fixed debian/watch
   
