--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+vdr (1.4.0-3) unstable; urgency=low
+
+  * NOT RELEASED YET
+
+  * Thomas Günther <tom@toms-cafe.de>
+    - Upgraded opt-24_jumpplay-0.8.dpatch to opt-24_jumpplay-0.9.dpatch
+
+ -- Debian VDR Team <pkg-vdr-dvb-devel@lists.alioth.debian.org>  Sun, 28 May 2006 21:03:39 +0200
+
 vdr (1.4.0-2) unstable; urgency=low
 
   * Thomas Günther <tom@toms-cafe.de>
