--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,7 @@ vdr (1.4.0-3) unstable; urgency=low
     - Upgraded opt-24_jumpplay-0.8.dpatch to opt-24_jumpplay-0.9.dpatch
   * Tobias Grimm <tg@e-tobi.net>
     - Stripped default SHUTDOWNCMD to "shutdown -h now"
-    - SHUTDOWNCMD in vdr-shurdown is now executed detached, so that VDR does not
+    - SHUTDOWNCMD in vdr-shutdown is now executed detached, so that VDR does not
       block and can cleanly shutdown when receiving SIGTERM
       (Thanks to Hanno Müller for pointing this out!)
     - Increased timeout for stopping the VDR daemon from 5 to 30 seconds, because
